# legal-document-review-openenv

./: .gitignore  Dockerfile  README.md  app.py  baseline_inference.py  environment.py  grader.py  inference.py  models.py  openenv.yaml  openenv_validate.py  pyproject.toml  requirements.txt  server.py  task_definitions.py
env/: app_env.py  models.py  server.py
graders/: grader.py
server/: app.py
static/: index.html
tasks/: task_definitions.py
